<resources>
    <string name="app_name">Recipe App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="welcome_back">Welcome back</string>
    <string name="please_enter_your_account_here">Please enter your account here</string>
    <string name="login">Login</string>
    <string name="don_t_have_any_account_sign_up">Don\'t have any account? Sign Up</string>
    <string name="ingredients">ingredients</string>
    <string name="instructions">instructions</string>
    <string name="search_for_recipes">Search for recipes...</string>
    <string name="you_have_no_favorite_recipes_yet">You have no favorite recipes yet.</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in</string>
    <string name="app_slogen">All Your Favorite Recipes in One Place.</string>
    <string name="find_best_recipes_nfor_cooking">find_best_recipes_nfor_cooking</string>
    <string name="categories">categories</string>
    <string name="favorites">Favorites</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="find_best_recipes_for_cooking">Find Best Recipes For cooking</string>
    <string name="beef">beef</string>
    <string name="about_us">About Us</string>
    <string name="sign_out">Sign Out</string>
    <string name="less">less</string>
    <string name="more">more</string>
    <string name="no_title">NO Title</string>
    <string name="no_instructions">No instructions\n</string>
    <string name="recipe_app_helps_you_discover_cook_and_enjoy_delicious_meals_from_around_the_world_search_watch_and_save_your_favorite_recipes_in_a_clean_and_friendly_interface_cooking_made_simple_and_fun">Recipe App helps you discover, cook, and enjoy delicious meals from around the world. Search, watch, and save your favorite recipes in a clean and friendly interface. Cooking made simple and fun!</string>
    <string name="about_the_creators">About the Creators</string>
    <string name="name">name</string>
    <string name="email">email</string>
    <string name="linkedin">linkedin</string>
    <string name="github">github</string>

</resources>