<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="12dp"
    card_view:cardElevation="6dp"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp">


        <ImageView
            android:id="@+id/imgCreator"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/ic_person"
            android:scaleType="centerCrop"
            android:layout_marginEnd="12dp" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Name"
                android:text="@string/name"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/Email"
                android:text="@string/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/LinkedIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/linkedin"
                android:textColor="@android:color/holo_blue_dark"
                android:autoLink="web"
                android:linksClickable="true"
                android:focusable="true"/>

            <TextView
                android:id="@+id/GitHub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/github"
                android:textColor="@android:color/holo_blue_dark"
                android:autoLink="web"
                android:linksClickable="true"
                android:focusable="true"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>